src/test/ui/parser/keyword-loop-as-identifier.stderr
error: expected pattern, found keyword `loop`
  --> $DIR/keyword-loop-as-identifier.rs:6:9
   |
LL |     let loop = "foo"; //~ error: expected pattern, found keyword `loop`
   |         ^^^^ expected pattern

error: aborting due to previous error

